# FinanceCompanion

./: .env.local.example  .gitignore  AGENTS.md  LICENSE  README.md  start-local.ps1  stop-local.ps1
src/API/: .env.example  Dockerfile  README.md  pyproject.toml
src/API/app/: __init__.py  main.py
src/API/app/application/use_cases/: accounts.py  auth.py  budgets.py  holdings.py  income_sources.py  net_worth.py  security_details.py  security_search.py
src/API/app/domain/: exceptions.py  models.py  protocols.py
src/API/app/domain/models/: __init__.py  account.py  account_column.py  budget_category.py  budget_sub_category.py  holding.py  income_period.py  income_source.py  monthly_record.py  net_worth.py  security_metadata.py  session_user.py  user.py  verified_identity.py
src/API/app/domain/protocols/: __init__.py  account_repository.py  budget_repository.py  holding_repository.py  (+5 more)
src/API/app/infrastructure/: alpha_vantage_security_details.py  alpha_vantage_security_search.py  cosmos_repositories.py  entra_identity.py  in_memory_repositories.py  security.py  seed_data.py  settings.py  yahoo_finance_security_search.py
src/API/finance_companion_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/API/tests/: test_accounts_batch_api.py  test_alpha_vantage_security_details.py  test_alpha_vantage_security_search.py  test_api_contracts.py  test_auth_use_case.py  test_budget_draft_api.py  test_cosmos_repositories.py  test_holdings_batch_api.py  test_net_worth_api.py  test_security_details.py  test_settings_security.py  test_yahoo_finance_security_search.py
(+117 files in other folders)
