[project]
name = "finance-companion-api"
version = "0.1.0"
description = "FastAPI backend for Finance Companion"
requires-python = ">=3.12"
dependencies = [
  "azure-data-tables>=12.4.0,<13.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -p no:cacheprovider"
